Fix styling select2 in dark mode

--- a/src/sass/components/_select2.scss
+++ b/src/sass/components/_select2.scss
@@ -52,6 +52,16 @@
   }
 }
 
+.select2-container--default .select2-selection--single {
+  background-color: $input-bg;
+}
+
+.select2-container--default .select2-search--dropdown .select2-search__field {
+  background-color: $input-bg;
+  color: $input-color;
+}
+
+
 // Display an invalid select2 as invalid
 select.is-invalid + .select2 .select2-selection {
   @extend .form-control.is-invalid
